deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slides
spec:
  replicas: 4
  selector:
    matchLabels:
      app: slides
  template:
    metadata:
      labels:
        app: slides
    spec:
      containers:
        - name: slides
          image: estragonthecat/prez-kubernetes:v1.0
